--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "shell",
             "label": "build",
-            "command": "bash -c \"rm -rf build && mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make\"",
+            "command": "bash -c \"rm -rf build && mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make -j8\"",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
